--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,23 +8,23 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
-    tagline: Full Stack Developer
+    name: Lisa Over
+    tagline: Data Scientist and Data Librarian
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
-    email: example@email.com
-    phone: 012 345 6789
-    timezone: America/Cancun # Enter your timezone, e.g., America/Havana, Africa/Casablanca, America/North_Dakota/Center
-    citizenship:
-    website: https://example.com/ # Include the full website URL, including "http://" or "https://".
-    linkedin: alandoe
-    xing: alandoe
-    github: jekyll
+    email: lisa.dslibr@gmail.com
+    phone: 
+    timezone: Eastern Standard Time # Enter your timezone, e.g., America/Cancun America/Havana, Africa/Casablanca, America/North_Dakota/Center
+    citizenship: United States of America
+    website: https://dslibr.com/ # Include the full website URL, including "http://" or "https://".
+    linkedin: https://www.linkedin.com/in/lisa-over/
+    xing: 
+    github: https://github.com/dslibr
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
-    twitter: '@jekyllrb'
+    twitter: #'@dslibr'
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
@@ -39,167 +39,100 @@ sidebar:
         - idiom: English
           level: Native
 
-        - idiom: French
-          level: Professional
-
-        - idiom: Spanish
-          level: Professional
-
     interests:
       title: Interests
       info:
-        - item: Climbing
+        - item: Biking
           link:
 
-        - item: Snowboarding
+        - item: Hiking
           link:
 
-        - item: Cooking
+        - item: Skoolie living
           link:
 
 career-profile:
     title: Career Profile
     summary: |
-      Summarise your career here lorem ipsum dolor sit amet, consectetuer
-      adipiscing elit. You can [download this free resume/CV template here]().
-      Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-      penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-      Donec quam felis, ultricies nec, pellentesque eu.
-      Second paragraph if required.
+      Welcome! My name is Lisa Over. I manage research data for a multifaceted study focused on the care and outcomes of traumatic injuries with the goal of 
+      updating existing standards of care. I develop reports and applications to support study administration and perform data munging tasks to make complex 
+      datasets ready for analysis. I focus on the needs of my clients, which include other data managers, data analysts, project managers, and study directors. 
+      I am part of a team that makes sense of data for the benefit of the public. What I do is essential to people, and the families of people, who receive 
+      better care as a result of this study.
+
+      My professional goal brings together my expertise and enthusiasm for computer programming, statistics, and math; my desire to solve problems that benefit 
+      people, organizations, or society; and my conviction to embrace challenges and life-long learning. I also enjoy teaching, and I volunteer with the 
+      Center for Analytical Approaches to Social Innovation (CAASI) at the University of Pittsburgh to mentor undergraduate social science students who 
+      are using open civic data to solve problems.
+
+      I bring a set of core teaching, communication, and programming skills as well as professionalism, dedication, and perseverance to everything I do. 
+      I am an enthusiastic, independent worker who values constructive criticism and welcomes opportunities to collaborate with peers. I gravitate toward 
+      intellectual challenges and am inclined to try new approaches or techniques in my work.
+
+Thank you for your interest in my resume and portfolio.
 education:
     title: Education
     info:
-      - degree: MSc in Computer Science
-        university: University of London
-        time: 2011 - 2012
+      - degree: Master of Data Science (MDS)
+        university: University of Pittsburgh
+        time: Expected 2027
+
+      - degree: Master of Library and Information Science (MLIS)
+        university: University of Pittsburgh
+        time: 2019 - 2023
         details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - degree: BSc in Applied Mathematics
-        university: Bristol University
-        time: 2007 - 2011
-        details: |
-          Describe your study here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-          sociis natoque penatibus et magnis dis parturient montes, nascetur
-          ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-          pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          My studies focused on the following topics:
+            - Applied Data Driven Methods
+            - Archives and Records Management
+
+      - degree: Master of Science in Computational Mathematics (MS)
+        university: Duquesne University
+        time: 2013 - 2015
+
+      - degree: Bachelor of Science (BS)
+        university: Bowling Green State University
+        time: 1989 - 1994
 
 experiences:
     title: Experiences
     info:
-      - role: Lead Developer
-        time: 2015 - Present
-        company: Startup Hubs, San Francisco
+      - role: Data Manager / Data Management Assistant
+        time: 2021 - Present / 2019 - 2021
+        company: Epidemiology Data Center (EDC), University of Pittsburgh
         details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-          enim. Donec pede justo. Sed ut perspiciatis unde omnis iste natus
-          error sit voluptatem accusantium doloremque laudantium, totam rem
-          aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-          architecto beatae vitae dicta sunt explicabo.
-            - Bullet point
-            - Bullet point
-      - role: Senior Software Engineer
-        time: 2014 - 2015
-        company: Google, London
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
-      - role: UI Developer
-        time: 2012 - 2014
-        company: Amazon, London
-        details: |
-          Describe your role here lorem ipsum dolor sit amet, consectetuer
-          adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-          Cum sociis natoque penatibus et magnis dis parturient montes,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec,
-          pellentesque eu, pretium quis, sem.
-            - Bullet point
-            - Bullet point
+          My primary responsibilities involve programming in Python, PL/SQL, and SAS to create and maintain reports and data entry applications for an Oracle-based 
+          in-house Data Management System and to clean electronic health record (EHR) data. Through these tasks, I support study personnel for a series of studies 
+          within the LITES, a network of medical professionals, prehospital providers, and emergency medical services who work together to conduct reseaech on 
+          injury care and outcomes.
+            - Develop and implement data processing tasks to clean electronic health record data from Excel and flat file sources.
+            - Develop computer-based monitoring procedures using PL/SQL, SAS, and VBA to summarize data quality issues, important subject information, and site monitoring and payment information.
+            - Develop web-based data gathering applications using PL/SQL and JavaScript to facilitate quality data entry.
+            - Work closely with clinical personnel and statisticians to understand reporting requirements and to develop effective methods of providing datasets and reports as needed.
+            - Improve data compliance reporting and quality control procedures by communicating inconsistencies and problems with data entry forms, or their use, through regular data management meetings and reports.
+            - Develop applications to map study variables to form structures required by the Federal Interagency Traumatic Brain Injury Research (FITBIR) organization.
 
 certifications:
       title: Certifications
       list:
-        - name: CV Builder
-          start: 2020
-          end: 2021
-          organization: Microsoft
-          credentialid: 111-222
-          credentialurl: www.google.com
-          credentialname: Google
+        - name: PA State Teacher Certification in 7-12 Mathematics
+          start: 2009
+          end: 2012
+          organization: Robert Morris University
+          credentialid: 
+          credentialurl: 
+          credentialname: 
           details: |
-            Details about cert. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit.
-            Nullam eget orci purus. Nullam ultrices neque nibh.
-            Aenean fermentum, felis vulputate suscipit accumsan,
-            sem enim bibendum augue, sed convallis arcu lacus at dui.
-            Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
-            Praesent felis nibh, eleifend id eleifend id, dictum id enim.
-            Praesent venenatis erat non augue suscipit consectetur.
-
-            Second paragraph. Sed eleifend enim ante, vitae efficitur purus
-            fringilla vel. Ut euismod, sem sed vulputate venenatis,
-            justo diam viverra velit, sed rhoncus leo leo eu justo.
-            Suspendisse placerat risus ante, sed porta nisi blandit at.
-        - name: Git learning
-          start: 2019
-          end:
-          organization: Microsoft
-          credentialid: 111-222
-          credentialurl: www.github.com
-          credentialname: Github
-          details: |
-            Older certification. Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit.
-            Nullam eget orci purus. Nullam ultrices neque nibh.
-            Aenean fermentum, felis vulputate suscipit accumsan,
-            sem enim bibendum augue, sed convallis arcu lacus at dui.
-            Pellentesque et nibh suscipit, vestibulum turpis eu, semper tortor.
-            Praesent felis nibh, eleifend id eleifend id, dictum id enim.
-            Praesent venenatis erat non augue suscipit consectetur.
 
 projects:
     title: Projects
     intro: >
-      You can list your side projects in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+      
     assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
-
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
-
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
+      - title: Grief to Action Mentor
+        link: "https://www.caasi.pitt.edu/initiatives/grief-action"
+        tagline: "Mentor undergraduate social science students through weekly workshops in the spring semester. Workshops focused on using Python to manage, 
+      visualize, and analyze data. These students developed research questions, obtained relevant data, and attended my hands-on workshops to learn 
+      how to code in Python to gain insights from data."
 
 oss:
     title: OSS Contributions
@@ -246,23 +179,12 @@ skills:
     title: Skills &amp; Proficiency
 
     toolset:
-      - name: Python & Django
-        level: 98%
+      - name: Python, PL/SQL, HTML5, Programming, Problem Solving
+        level: High
 
-      - name: Javascript & jQuery
-        level: 98%
+      - name: SAS, R, Javascript, CSS, T-SQL
+        level: Moderate
 
-      - name: Angular
-        level: 98%
-
-      - name: HTML5 & CSS
-        level: 95%
-
-      - name: Ruby on Rails
-        level: 85%
-
-      - name: Sketch & Photoshop
-        level: 60%
 
 footer: >
     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
