--- a/_data/data.yml
+++ b/_data/data.yml
@@ -97,8 +97,8 @@ education:
 experiences:
     title: Experiences
     info:
-      - role: Data Manager / Data Management Assistant
-        time: 2021 - Present / 2019 - 2021
+      - role: Data Manager (Data Management Assistant 2019 - 2021)
+        time: 2019 - Present
         company: Epidemiology Data Center (EDC), University of Pittsburgh
         details: |
           My primary responsibilities involve programming in Python, PL/SQL, and SAS to create and maintain reports and data entry applications for an Oracle-based 
@@ -111,6 +111,12 @@ experiences:
             - Work closely with clinical personnel and statisticians to understand reporting requirements and to develop effective methods of providing datasets and reports as needed.
             - Improve data compliance reporting and quality control procedures by communicating inconsistencies and problems with data entry forms, or their use, through regular data management meetings and reports.
             - Develop applications to map study variables to form structures required by the Federal Interagency Traumatic Brain Injury Research (FITBIR) organization.
+
+      - role: Instructor
+        time: 2023 - Present
+        company: Center for Analytical Approaches to Social Innovation (CAASI), University of Pittsburgh
+        details: |
+          During spring semester, I conduct weekly Python workshops for undergraduate social science students who want to solve problems using open civic data.
 
 certifications:
       title: Certifications
@@ -129,9 +135,34 @@ projects:
     intro: >
       
     assignments:
-      - title: Grief to Action Mentor
-        link: "https://www.caasi.pitt.edu/initiatives/grief-action"
-        tagline: "Conduct weekly Python workshosps for undergraduate social science students who want to solve problems using open civic data."
+      - title: Data Governance Health Status Checks
+        link: "https://lisaover.github.io/portfolio/9800-data-gov-health-status-checks/"
+        tagline: "This collaborative project involved contextual design research and the development of user-centered procedures and tools for the City of Pittsburgh&rsquo;s Data Governance Health Status Checks."
+
+      - title: Digital Humanities Topic Modeling
+        link: "https://lisaover.github.io/portfolio/9801-pitt-topic-modeling/"
+        tagline: "The high-level goal of this exploratory, unsupervised learning project was to investigate which topics are present within the humanities digital collection, and how those topics vary over time."
+
+      - title: Life During COVID-19 Application Profile and Metadata Schema
+        link: "https://lisaover.github.io/portfolio/9802-pitt-metadata/"
+        tagline: "A collaborative project to create a Metadata Schema Application Profile. The Life During COVID-19 is an XML Schema application profile for describing a collection of internet-based media and datasets that reflect American reactions and outcomes related to the COVID-19 pandemic of 2019-2020."
+   
+      - title: Census Tracks and Relationship Files
+        link: "https://lisaover.github.io/portfolio/9803-pitt-open-data/"
+        tagline: "This Census project explains the Allegheny County 2000-2010 Census Tract Relationship File and shows how the 2010 Census tracts in Allegheny County, Pennsylvania relate to the 2000 Census tracts."
+
+      - title: Losing Schools to the Economic Chasm
+        link: "https://lisaover.github.io/portfolio/9901-duq-masters-thesis/"
+        tagline: "For my thesis for the Computational Mathematics program at Duquesne, I examined the amount of variance in the new Pennsylvania school performance data that is explained by IRS-based income values."
+
+      - title: Dictation Tutor
+        link: "https://lisaover.github.io/portfolio/9902-duq-dictation-tutor/"
+        tagline: "A collaborative project to create a java application to enable English language learners to practice writing from oral prompts in preparation for the written portion of the citizenship test."
+
+      - title: Boggle Game
+        link: "https://lisaover.github.io/portfolio/9903-duq-boggle-game/"
+        tagline: "A collaborative project to create a servlet version of Boggle, which implements the MVC design pattern using a Java servlet as controller, a Java Beans class for the data model, and the XML version of JSP (jspx) to generate the views."
+
 skills:
     title: Skills &amp; Proficiency
 
@@ -145,7 +176,7 @@ skills:
       - name: HTML5, CSS, Javascipt
         level: 75%
 
-      - name: SAS & R
+      - name: SAS, R, Java
         level: 60%
 
 footer: >
