--- a/_data/data.yml
+++ b/_data/data.yml
@@ -112,7 +112,7 @@ experiences:
             - Improve data compliance reporting and quality control procedures by communicating inconsistencies and problems with data entry forms, or their use, through regular data management meetings and reports.
             - Develop applications to map study variables to form structures required by the Federal Interagency Traumatic Brain Injury Research (FITBIR) organization.
 
-      - role: Instructor
+      - role: Volunteer Instructor/Mentor
         time: 2023 - Present
         company: Center for Analytical Approaches to Social Innovation (CAASI), University of Pittsburgh
         details: |
