--- a/_data/data.yml
+++ b/_data/data.yml
@@ -18,7 +18,7 @@ sidebar:
     timezone: Eastern Standard Time # Enter your timezone, e.g., America/Cancun America/Havana, Africa/Casablanca, America/North_Dakota/Center
     citizenship: United States of America
     website: https://dslibr.com/ # Include the full website URL, including "http://" or "https://".
-    linkedin: https://www.linkedin.com/in/lisa-over/
+    linkedin: lisa-over
     xing: 
     github: https://github.com/dslibr
     telegram: # add your nickname without '@' sign
