--- a/_data/data.yml
+++ b/_data/data.yml
@@ -93,6 +93,8 @@ education:
       - degree: Bachelor of Science (BS)
         university: Bowling Green State University
         time: 1989 - 1994
+        details: |
+          Scientific and Technical Communication with a specialization in Mathematics and Computer Science
 
 experiences:
     title: Experiences
@@ -118,6 +120,21 @@ experiences:
         details: |
           During spring semester, I conduct weekly Python workshops for undergraduate social science students who want to solve problems using open civic data.
 
+      - role: Adjunct Professor
+        time: 2016 - 2018
+        company: Duquesne University
+        details: |
+          Over the course of two years, I taught eight sections of Business Statistics for the Palumbo-Donahue School of Business and one section of Problem Solving
+          for the Department of Mathematics and Computer Science. I also taught one section of Fundamentals of Statistics as a student in the Computational Mathematics program.
+          Visit my <a href="https://dslibr.github.io/DuquesneProf/" target="_blank">teaching portfolio at https://dslibr.github.io/DuquesneProf/</a>.
+            - Designed and delivered lessons to engage students with real-world and hands-on activities.
+            - Incorporated activities to model the data analysis or problem solving process to develop analytical thinking.
+            - Monitored student progress through formative assessments and assignments.
+            - Provided feedback to students through re-teaching and comments.
+            - Worked closely with students individually and in small groups to identify areas for improvement.
+
+
+
 certifications:
       title: Certifications
       list:
@@ -129,7 +146,6 @@ certifications:
           credentialurl: 
           credentialname: 
           details: |
-            Visit my <a href="https://dslibr.github.io/DuquesneProf/" target="_blank">teaching portfolio</a> from my experience teaching statistics and problem solving at Duquesne University.
 
 projects:
     title: Projects
